# DOGIToys

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  test.sh
include/dogitoys/: connect.hpp  create.hpp  dogitoys-fetch.h  dogitoys-file.hpp  dogitoys-gff.h  dogitoys-go.hpp  dogitoys-schemas.h  dogitoys-schemas.hpp  dogitoys-snack.hpp  dogitoys-tools.hpp  dogitoys.h  dogitoys.hpp  genomic_features.hpp  gff-queries.hpp  initiate.hpp  populate.hpp  query.hpp  tools.hpp
include/dogitoys/populate/: gene_ontology.hpp  genomic_features.hpp  mapping.hpp  parameters.hpp  populate.hpp
src/: connect.cpp  create.cpp  create.cpp.autosave  dogitoys-fetch.c  dogitoys-gff.c  dogitoys-gff3.cpp  dogitoys-go.c  dogitoys-populate.c  dogitoys-snack.c  dogitoys.c  dogitoys.cpp  genomic_features.cpp  initiate.cpp  populate.cpp  pydogitoys.cpp
src/populate/: gene_ontology.cpp  genomic_features.cpp  mapping.cpp  parameters.cpp  populate.cpp
test/: test.py
test/src/: test_dogitoys.cpp
